--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ Online HTML, CSS and JavaScript editor to run code online.
                 <div class="car">
                     <div id="body"></div>
                     <div id="wheel"></div>
+                    <div id="light"></div>
                 </div>
             </div>
         </div>
@@ -78,5 +79,6 @@ Online HTML, CSS and JavaScript editor to run code online.
         </div>
     </div>
 </body>
+
 
 </html>
