--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!-- 
-Online HTML, CSS and JavaScript editor to run code online.
--->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -36,7 +33,7 @@ Online HTML, CSS and JavaScript editor to run code online.
                 <div class="car">
                     <div id="body"></div>
                     <div id="wheel"></div>
-                    <div id="light"></div>
+                    <div id="headlight"></div>
                 </div>
             </div>
         </div>
@@ -82,3 +79,4 @@ Online HTML, CSS and JavaScript editor to run code online.
 
 
 </html>
+
