--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
             <div class="cloud" id='cloud2'></div>
             <div class="cloud" id='cloud3'></div>
             <div class="cloud" id='cloud4'></div>
+            <div class="stars">
+              <div id="star1"></div>
+              <div id="star2"></div>
+              <div id="star3"></div>
+              <div id="star4"></div>
+              <div id="star5"></div>
+              <div id="star6"></div>
+              <div id="star7"></div>
+            </div>
         </div>
         <div id='grass'>
             <div id='road'>
@@ -79,4 +88,5 @@
 
 
 </html>
+
 
